Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52048

[REG 5.6->5.7] QTextOption::ShowLineAndParagraphSeparators causes trailing garbage to be displayed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.7.0 Beta
    • 5.7.0 Alpha
    • GUI: Text handling
    • None
    • Windows 10, Kubuntu 15.10 KDE 5.15/g++ 5.2 64bit
    • 53180c430fb27fb1f5e901000856350bcf6d2723

       QPlainTextEdit mainW;
          mainW.setPlainText("bla");
          QTextDocument *doc =  mainW.document();
          QTextOption opt = doc->defaultTextOption();
          opt.setFlags(opt.flags() | QTextOption::ShowLineAndParagraphSeparators);
          doc->setDefaultTextOption(opt);
      

        1. qtbug52048.jpg
          4 kB
          Friedemann Kleint
        2. qtbug52048.zip
          0.9 kB
          Friedemann Kleint
        3. qtbug52048_56.jpg
          6 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            kleint Friedemann Kleint
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes